--- a/application/configs/acl.ini
+++ b/application/configs/acl.ini
@@ -6,25 +6,27 @@ admin = null
   
 [ressources]  
   
-; d‚finition des ressources dans le module par d‚faut
+; dÃ©finition des ressources dans le module par dï¿½faut
 admin    = null  
 index    = null   
- 
-; d‚finition des ressources dans le module de blog  
-tab_index   = null
-tab_create  = null
-tab_display = null  
-  
+tab		 = null
+user	 = null
+   
 [guest]  
   
-allow.index    = null     
-  
-; member h‚rite de guest  
-[member : guest]  
+allow.index    = null
+allow.user	   = signin, signup
+allow.tab	   = index, display
     
-allow.tab_display = null  
   
-; admin h‚rite de member  
+; member hÃ©rite de guest  
+[member : guest]  
+
+allow.user	  	= signout
+deny.user		= signup
+allow.tab		= create, edit
+      
+  
+; admin hÃ©rite de member  
 [admin : member]  
-  
-allow.admin = null  
+    
