Added role in signup

--- a/application/configs/acl.ini
+++ b/application/configs/acl.ini
@@ -15,8 +15,8 @@ user	 = null
 [guest]  
   
 allow.index    = null
-allow.user	   = signin, signup
-allow.tab	   = index, display
+allow.user	   = index,signin,signup
+allow.tab	   = index,display
     
   
 ; member hérite de guest  
@@ -24,7 +24,7 @@ allow.tab	   = index, display
 
 allow.user	  	= signout
 deny.user		= signup
-allow.tab		= create, edit
+allow.tab		= create,edit
       
   
 ; admin hérite de member  
