Modified tab form

--- a/application/configs/acl.ini
+++ b/application/configs/acl.ini
@@ -24,7 +24,7 @@ allow.tab	   = index,display
 
 allow.user	  	= signout
 deny.user		= signup
-allow.tab		= create,edit,display
+allow.tab		= index,create,edit,display
       
   
 ; admin hérite de member  
