--- a/application/configs/acl.ini
+++ b/application/configs/acl.ini
@@ -11,6 +11,7 @@ admin    = null
 index    = null   
 tab		 = null
 user	 = null
+error	 = null
    
 [guest]  
   
@@ -29,4 +30,6 @@ allow.tab		= index,create,edit,display
   
 ; admin hérite de member  
 [admin : member]  
+
+allow.error		= null
     
