--- a/application/configs/acl.ini
+++ b/application/configs/acl.ini
@@ -16,14 +16,15 @@ error	 = null
 [guest]  
   
 allow.index    = null
-allow.user	   = index,signin,signup
+allow.user	   = index,signin,signup,profile
 allow.tab	   = index,display
+allow.error	   = null
     
   
 ; member hérite de guest  
 [member : guest]  
 
-allow.user	  	= signout
+allow.user	  	= signout,profile
 deny.user		= signup
 allow.tab		= index,create,edit,display
       
