--- a/application/configs/acl.ini
+++ b/application/configs/acl.ini
@@ -24,7 +24,7 @@ allow.error	   = null
 ; member hérite de guest  
 [member : guest]  
 
-allow.user	  	= signout,profile,index,edit,askfriendship,acceptfriend,declinefriend
+allow.user	  	= signout,profile,index,edit,askfriendship,acceptfriend,declinefriend,removefriendship
 deny.user		= signup
 allow.tab		= index,create,edit,display
       
