--- a/application/configs/acl.ini
+++ b/application/configs/acl.ini
@@ -12,6 +12,7 @@ index    = null
 tab		 = null
 user	 = null
 error	 = null
+search 	 = null
    
 [guest]  
   
@@ -19,6 +20,7 @@ allow.index    = null
 allow.user	   = index,signin,signup,profile
 allow.tab	   = index,display
 allow.error	   = null
+allow.search   = null
     
   
 ; member hérite de guest  
