--- a/application/configs/acl.ini
+++ b/application/configs/acl.ini
@@ -28,7 +28,7 @@ allow.search   = null
 
 allow.user	  	= signout,profile,index,edit,askfriendship,acceptfriend,declinefriend,removefriendship
 deny.user		= signup
-allow.tab		= index,create,edit,display
+allow.tab		= index,create,edit,display,delete
       
   
 ; admin hérite de member  
