Permalinks and image action

--- a/application/configs/acl.ini
+++ b/application/configs/acl.ini
@@ -13,14 +13,18 @@ tab		 = null
 user	 = null
 error	 = null
 search 	 = null
+viewtab	 = null
+accueil	 = null
    
 [guest]  
   
 allow.index    = null
 allow.user	   = index,signin,signup,profile
-allow.tab	   = index,display
+allow.tab	   = index,display,image
 allow.error	   = null
 allow.search   = null
+allow.viewtab  = null
+allow.accueil  = null
     
   
 ; member hérite de guest  
@@ -28,7 +32,8 @@ allow.search   = null
 
 allow.user	  	= signout,profile,index,edit,askfriendship,acceptfriend,declinefriend,removefriendship
 deny.user		= signup
-allow.tab		= index,create,edit,display,delete
+allow.tab		= index,create,edit,display,delete,image
+allow.accueil  = null
       
   
 ; admin hérite de member  
